--- a/Resume.html
+++ b/Resume.html
@@ -133,12 +133,12 @@
                 </ul>
             </div>
 
-            <div class="d-flex justify-content-center mt-3">
-                <a href="#" class="btn btn-primary btn-sm" style="width: 140px; align-items: center; background-color: whitesmoke;"
-                    onclick="downloadResume()">
-                    <i class="bi bi-download"></i> Download as PDF
-                </a>
-            </div>
+
+            <a href="#" class="btn btn-primary btn-sm d-flex justify-content-center mt-3"
+                style="width: 140px; align-items: center; background-color: whitesmoke;" onclick="downloadResume()">
+                <i class="bi bi-download"></i> Download as PDF
+            </a>
+
 
 
 
