--- a/Resume.html
+++ b/Resume.html
@@ -135,7 +135,7 @@
 
 
             <a href="#" class="btn btn-primary btn-sm d-flex justify-content-center mt-3"
-                style="width: 140px; align-items: center; background-color: whitesmoke;" onclick="downloadResume()">
+                style="width: 140px; align-items: center;" onclick="downloadResume()">
                 <i class="bi bi-download"></i> Download as PDF
             </a>
 
