--- a/Resume.html
+++ b/Resume.html
@@ -134,15 +134,10 @@
             </div>
 
 
-            <div class="card" style="width: 18rem;">
-                <!-- card content here -->
-                <div class="text-center mt-3" style="background-color: whitesmoke; padding: 20px 0;">
-                    <a href="#" class="btn btn-primary btn-sm px-3" onclick="downloadResume()">
-                        <i class="bi bi-download"></i> PDF
-                    </a>
-                </div>
-            </div>
-
+            <a href="#" class="btn btn-primary btn-sm d-flex justify-content-center mt-3"
+                style="width: 140px; align-items: center;" onclick="downloadResume()">
+                <i class="bi bi-download item-center"></i> Download as PDF
+            </a>
 
 
 
