--- a/Resume.html
+++ b/Resume.html
@@ -14,9 +14,6 @@
 
     <title>My Portfolio</title>
 
-    <styles>
-    </styles>
-
 
 </head>
 
@@ -40,7 +37,7 @@
                             href="/A.D.CARED-PORTFOLIO/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/about.html">About</a>
+                        <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/about.html"> About</a>
                     </li>
 
                     <li class="nav-item">
@@ -133,12 +130,12 @@
                 </ul>
             </div>
 
-
+<div class="justify-content-between align-items-center">
             <a href="#" class="btn btn-primary btn-sm d-flex justify-content-center mt-3"
                 style="width: 140px; align-items: center;" onclick="downloadResume()">
-                <i class="bi bi-download item-center"></i> Download as PDF
+                <i class="bi bi-download"></i> Download as PDF
             </a>
-
+</div>
 
 
 
@@ -162,7 +159,7 @@
             </div>
 
             <div>
-                <a href="/A.D.CARED-PORTFOLIO/about.html" class="text-decoration-none"></a>>About</a>
+                <a href="/A.D.CARED-PORTFOLIO/about.html" class="text-decoration-none"></a>About</a>
             </div>
 
             <div>
