--- a/projects.html
+++ b/projects.html
@@ -111,7 +111,7 @@
                             resources and contact information
                         </p>
                           <div class="card-body d-flex justify-content-center">
-                        <a href="#" class="btn btn-primary">View Project</a>
+                        <a href=" https://atusasiire.github.io/SCHOOL/" class="btn btn-primary">View Project</a>
                         </div>
                     </div>
                 </div>
